// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCodeBlockImpl block highlights javascript code, adding "js" class 1`] = `
<div
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-js"
>
  <pre
    class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="ouiCodeBlock__code js"
    />
  </pre>
</div>
`;

exports[`OuiCodeBlockImpl block renders a pre block tag 1`] = `
<div
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-none testClass1 testClass2"
>
  <pre
    class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="ouiCodeBlock__code"
      data-test-subj="test subject string"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`OuiCodeBlockImpl block renders a pre block tag with a css class modifier 1`] = `
<div
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge prismjs language-none testClass1 testClass2"
>
  <pre
    class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePre"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="ouiCodeBlock__code"
      data-test-subj="test subject string"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`OuiCodeBlockImpl block renders with transparent background 1`] = `
<div
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--transparentBackground prismjs language-none"
>
  <pre
    class="ouiCodeBlock__pre ouiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="ouiCodeBlock__code"
    />
  </pre>
</div>
`;

exports[`OuiCodeBlockImpl inline highlights javascript code, adding "js" class 1`] = `
<span
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--inline prismjs language-js"
>
  <code
    class="ouiCodeBlock__code js"
  />
</span>
`;

exports[`OuiCodeBlockImpl inline renders an inline code tag 1`] = `
<span
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--inline prismjs language-none testClass1 testClass2"
>
  <code
    aria-label="aria-label"
    class="ouiCodeBlock__code"
    data-test-subj="test subject string"
  >
    var some = 'code';
console.log(some);
  </code>
</span>
`;

exports[`OuiCodeBlockImpl inline renders with transparent background 1`] = `
<span
  class="ouiCodeBlock ouiCodeBlock--fontSmall ouiCodeBlock--paddingLarge ouiCodeBlock--transparentBackground ouiCodeBlock--inline prismjs language-none"
>
  <code
    class="ouiCodeBlock__code"
  />
</span>
`;
